--- a/README
+++ b/README
@@ -9,11 +9,11 @@ Project information:
 
 Read-only supported XFS formats:
 
-* version 5
+* version 4 and 5
 
 Unsupported XFS format features:
 
-* XFS version 1, 2, 3 or 4
+* XFS version 1, 2 or 3
 
 For more information see:
 
