--- a/documentation/X File System (XFS).asciidoc
+++ b/documentation/X File System (XFS).asciidoc
@@ -72,7 +72,7 @@ a placeholder for a name that never given.
 
 == The allocation group
 
-An allocation group consist of:
+An allocation group consists of:
 
 * a sector containing a superblock
 * a sector containing free block information
@@ -526,8 +526,11 @@ file offset = allocation group file offset + ( inode number x inode size )
 
 The inode can be followed by:
 
-* inline data (fork type XFS_DINODE_FMT_LOCAL)
-* extent list (fork type XFS_DINODE_FMT_EXTENTS)
+* data fork (descriptor)
+** inline data (fork type XFS_DINODE_FMT_LOCAL)
+** extent list (fork type XFS_DINODE_FMT_EXTENTS)
+** extent B+ tree (fork type XFS_DINODE_FMT_BTREE)
+* optional (extended) attributes data fork (descriptor)
 
 === Inode version 1
 
@@ -565,9 +568,10 @@ Contains number of nano seconds
 | 64 | 8 | | Number of (data) blocks
 | 72 | 4 | | Extent size
 | 76 | 4 | | Number of data extents
-| 80 | 2 | | Number of (extended) attribute extents
-| 84 | 1 | | (Extended) attribute fork descriptor offset
-| 83 | 1 | | [yellow-background]*Unknown (format of the attribute fork)*
+| 80 | 2 | | Number of (extended) attributes extents
+| 84 | 1 | | (Extended) attributes fork descriptor offset +
+Contains an offset (value x 8) relative to the end of the inode
+| 83 | 1 | | [yellow-background]*Unknown (format of the attributes fork)*
 | 84 | 4 | | [yellow-background]*Unknown (DMAPI event mask)*
 | 88 | 2 | | [yellow-background]*Unknown (DMAPI state)*
 | 90 | 2 | | Inode flags
@@ -612,9 +616,10 @@ Contains number of nano seconds
 | 64 | 8 | | Number of (data) blocks
 | 72 | 4 | | Extent size
 | 76 | 4 | | Number of data extents
-| 80 | 2 | | Number of (extended) attribute extents
-| 84 | 1 | | (Extended) attribute fork descriptor offset
-| 83 | 1 | | [yellow-background]*Unknown (format of the attribute fork)*
+| 80 | 2 | | Number of (extended) attributes extents
+| 84 | 1 | | (Extended) attributes fork descriptor offset +
+Contains an offset (value x 8) relative to the end of the inode
+| 83 | 1 | | [yellow-background]*Unknown (format of the attributes fork)*
 | 84 | 4 | | [yellow-background]*Unknown (DMAPI event mask)*
 | 88 | 2 | | [yellow-background]*Unknown (DMAPI state)*
 | 90 | 2 | | Inode flags
@@ -661,9 +666,10 @@ Contains number of nano seconds
 | 64 | 8 | | Number of (data) blocks
 | 72 | 4 | | Extent size
 | 76 | 4 | | Number of data extents
-| 80 | 2 | | Number of (extended) attribute extents
-| 84 | 1 | | (Extended) attribute fork descriptor offset
-| 83 | 1 | | [yellow-background]*Unknown (format of the attribute fork)*
+| 80 | 2 | | Number of (extended) attributes extents
+| 84 | 1 | | (Extended) attributes fork descriptor offset +
+Contains an offset (value x 8) relative to the end of the inode
+| 83 | 1 | | [yellow-background]*Unknown (format of the attributes fork)*
 | 84 | 4 | | [yellow-background]*Unknown (DMAPI event mask)*
 | 88 | 2 | | [yellow-background]*Unknown (DMAPI state)*
 | 90 | 2 | | Inode flags +
@@ -732,8 +738,9 @@ _Bitmask: 0xf000 (S_IFMT)_
 | 0 | XFS_DINODE_FMT_DEV | [yellow-background]*Unknown (Used for character and block devices)*
 | 1 | XFS_DINODE_FMT_LOCAL | Data is stored inline (in the inode)
 | 2 | XFS_DINODE_FMT_EXTENTS | Data is referrenced by extents stored in an extent list +
-See sction: <<extent_list,Extent list>>
-| 3 | XFS_DINODE_FMT_BTREE | Data is referrence by a B+ tree node
+See section: <<extent_list,Extent list>>
+| 3 | XFS_DINODE_FMT_BTREE | Data is referrence by extents stored in an extents B+ tree +
+See section: <<extent_btree,Extent B+ tree>>
 | 4 | XFS_DINODE_FMT_UUID | [yellow-background]*Unknown (currently not used)*
 | 5 | XFS_DINODE_FMT_RMAP | Data is referrence by a reverse mapping
 |===
@@ -767,7 +774,13 @@ XFS_DIFLAG_NEWRTBM Specifies the sb_rbmino uses the new real-time bitmap format
 
 === [[extent_list]]Extent list
 
-The extent list (xfs_bmbt_rec_t) is 128 bits of size and consist of:
+The extent list consists of:
+
+* one or more <<packed_extent,packed extents>>
+
+==== [[packed_extent]]Packed extent
+
+The packed extent (xfs_bmbt_rec_t) is 128 bits of size and consist of:
 
 [cols="1,1,1,5",options="header"]
 |===
@@ -782,6 +795,102 @@ The extent list (xfs_bmbt_rec_t) is 128 bits of size and consist of:
 file offset = absolute block number x block size
 ....
 
+=== [[extent_btree]]Extent B+ tree
+
+==== Extent B+ tree root node
+
+The root node of the extents B+ tree is stored in the inode and consist of:
+
+* node header
+* array of extent B+ tree branch node entry keys
+* array of extent B+ tree branch node entry values
+
+The number of reserved key-value pairs is calculated as following:
+....
+number of reserved key-value pairs = ( node data size - 4 ) / 16
+....
+
+Where "node data size" is ( "attributes fork descriptor offset" x 8 ) if the
+value is not 0, or otherwise the remaining inode block size.
+
+==== Extent B+ tree branch node header
+
+The branch node header (xfs_bmdr_block_t) is 4 byte of size and consist of:
+
+[cols="1,1,1,5",options="header"]
+|===
+| Offset | Size | Value | Description
+| 0 | 2 | | Node level
+| 2 | 2 | | Number of used key-value pairs in the node
+|===
+
+==== Extent B+ tree branch node entry key
+
+The branch node entry key (xfs_bmbt_key_t) is 8 byte of size and consist of:
+
+[cols="1,1,1,5",options="header"]
+|===
+| Offset | Size | Value | Description
+| 0 | 8 | | Data offset
+|===
+
+==== Extent B+ tree branch node entry value
+
+The branch node entry value (xfs_bmbt_key_t) is 8 byte of size and consist of:
+
+[cols="1,1,1,5",options="header"]
+|===
+| Offset | Size | Value | Description
+| 0 | 8 | | Block number of the extent B+ tree sub node +
+Contains a block number relative to the start of the file
+|===
+
+[yellow-background]*TODO check if block number relative to the start of the file or the allocation group*
+
+==== Extent B+ tree sub node block
+
+===== Extent B+ tree sub node block header
+
+The sub node block header (xfs_bmbt_block_t) is TBD byte of size and consist of:
+
+[cols="1,1,1,5",options="header"]
+|===
+| Offset | Size | Value | Description
+| 0 | 4 | | Signature
+| 4 | 2 | | Level (or depth/height) +
+Contains 0 for a leaf block
+| 6 | 2 | | Number of records
+| 8 | 8 | | Previous B+ tree block number +
+Contains -1 (0xffffffffffffffff) if not set
+| 12 | 8 | | Next B+ tree block number +
+Contains -1 (0xffffffffffffffff) if not set
+|===
+
+==== Extent B+ tree sub node block header signatures
+
+[cols="1,5",options="header"]
+|===
+| Signature | Description
+| "BMA3" | Version 5 extent B+ tree sub node block
+| "BMAP" | Extent B+ tree sub node block
+|===
+
+==== Extent B+ tree branch block node
+
+The extent B+ tree branch block record consists of:
+
+* node header
+* array of extent B+ tree branch node entry keys
+* array of extent B+ tree branch node entry values
+
+[yellow-background]*TODO number of reserved key-value pairs*
+
+==== Extent B+ tree leaf block node
+
+The extent B+ tree leaf block node consists of:
+
+* one or more <<packed_extent,packed extents>>
+
 == Directory entries
 
 Directories entries are stored in the data fork of a directory inode. The
@@ -789,8 +898,7 @@ directory entries can be stored in multiple ways:
 
 * as a short-form directory table
 * as a block directory
-
-[yellow-background]*TODO describe B+ tree forms*
+* as a directory B+ tree
 
 === Short-form directory table
 
@@ -833,11 +941,15 @@ Does not include the end-of-string character
 | 1 | 2 | | [yellow-background]*Unknown (offset, tag)*
 | 3 | ... | | Name
 4+| _Only present if XFS_SB_VERSION2_FTYPE is set_
-| ... | 1 | | [yellow-background]*Unknown (file type)*
+| ... | 1 | | File type
 4+| _Common_
 | ... | 4 or 8 | | Inode number +
 Contains an absolute inode number
 |===
+
+[NOTE]
+File type seems to be present on format version even if XFS_SB_VERSION2_FTYPE
+is not set.
 
 === Block directory
 
@@ -966,6 +1078,10 @@ and consists of:
 | 0 | 4 | | Number of directory entries
 | 4 | 4 | | Number of unused entries
 |===
+
+=== Directory B+ tree
+
+[yellow-background]*TODO describe B+ tree forms*
 
 :numbered!:
 [appendix]
